finalização do footer

--- a/index.html
+++ b/index.html
@@ -136,11 +136,43 @@
                 </div>
             </div>
         </section>
-
-            
+        <section class="topico">
+            <h2 class="topico-titulo">Topicos visitados recentemente</h2>
+            <ul class="topico-lista">
+                <li class="topico-item">
+                    <a href="#" class="topico-link">Android</a>
+                </li>
+                <li class="topico-item">
+                    <a href="#" class="topico-link">Marketing Digital</a>
+                </li>
+                <li class="topico-item">
+                    <a href="#" class="topico-link">Agile</a>
+                </li>
+                <li class="topico-item">
+                    <a href="#" class="topico-link">Startups</a>
+                </li>
+                <li class="topico-item">
+                    <a href="#" class="topico-link">HTML & CSS</a>
+                </li>
+                <li class="topico-item">
+                    <a href="#" class="topico-link">Python</a>
+                </li>
+                <li class="topico-item">
+                    <a href="#" class="topico-link">OO</a>
+                </li>
+                <li class="topico-item">
+                    <a href="#" class="topico-link">Java</a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-
+        <h2 class="footer-titulo">Fique por dentro das novidades</h2>
+        <p class="footer-txt">Atualizaçao de e-books, novos livros, promoções e outros.</p>
+        <input type="email" class="footer-email" placeholder=" Cadastre seu e-mail"> 
+        <hr/>
+        <h3>Grupo Alura</h3>
+        <p class="copy">&copy;Gabriel Apolinário</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
