--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https: //fonts.googleapis.com/css2? family= Josefin+Sans:wght@400;700 & display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,9 +29,26 @@
                 <li class="lista-item"><a href="#" class="lista-menu-link">Design & UX</a></li>
             </ul>
             <img src="img/Logo.png" alt="logo" class="img-cabecalho">
+            <h1 class="-titulo"><b class="-titulo-negrito">Alura</b>Books</h1>
         </div>
+            <ul class="-lista-menu">
+                <input type="checkbox" id="-menu-hamburg" class="-menu-botao">
+                <label for="-menu-hamburg">
+                    <li class="-lista-item">Catergorias</li>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-item"><a href="#" class="lista-menu-link">Programação</a></li>
+                    <li class="lista-item"><a href="#" class="lista-menu-link">Front-end</a></li>
+                    <li class="lista-item"><a href="#" class="lista-menu-link">Infraestrutura</a></li>
+                    <li class="lista-item"><a href="#" class="lista-menu-link">Business</a></li>
+                    <li class="lista-item"><a href="#" class="lista-menu-link">Design & UX</a></li>
+                </ul>
+
+                <li class="-lista-item"><a href="#" class="-lista-link">Favoritos</a></li>
+                <li class="-lista-item"><a href="#" class="-lista-link">Minha estante</a></li>
+            </ul>
         <div class="container-header">
-            <a href="#" class="img-cabecalho"><img src="img/Favoritos.png" alt="Icone de favoritos"></a>
+            <a href="#" class="img-cabecalho -img-cabecalho"><img src="img/Favoritos.png" alt="Icone de favoritos"></a>
             <a href="#" class="img-cabecalho"><img src="img/Compras.png" alt="Sacola de compras"></a>
             <a href="#" class="img-cabecalho"><img src="img/Usuário.png" alt="Menu do usuário"></a>
         </div>
@@ -165,14 +183,98 @@
                 </li>
             </ul>
         </section>
+        <div class="-inicio-rodape">
+            <div class="-rodape-div">
+                <h2 class="footer-titulo">Fique por dentro das novidades</h2>
+                <p class="footer-txt">Atualizaçao de e-books, novos livros, promoções e outros.</p>
+            </div>
+            <input type="email" class="footer-email" placeholder=" Cadastre seu e-mail">
+        </div>
     </main>
     <footer>
-        <h2 class="footer-titulo">Fique por dentro das novidades</h2>
-        <p class="footer-txt">Atualizaçao de e-books, novos livros, promoções e outros.</p>
-        <input type="email" class="footer-email" placeholder=" Cadastre seu e-mail"> 
         <hr/>
-        <h3>Grupo Alura</h3>
-        <p class="copy">&copy;Gabriel Apolinário</p>
+        <div class="-footer-lista">
+            <h3 class="footer-titulo1">Grupo Alura</h3>
+
+            <ul class="footer-lista">
+                <li class="footer-lista-titulo">Educação</li>
+                <li class="footer-lista-item">
+                    <img src="img/Caelum.png" alt="Logo Caelum">
+                    <a href="#" class="footer-lista-link">Caelum</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/CasaDoCodigo.png" alt="Logo casa do codigo">
+                    <a href="#" class="footer-lista-link">Casa do Código</a>
+                </li>
+            </ul>
+            <ul class="footer-lista">
+                <li class="footer-lista-titulo">Educação</li>
+                <li class="footer-lista-item">
+                    <img src="img/Alura.png" alt="logo Alura">
+                    <a href="#" class="footer-lista-link">Alura</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/AluraEmpresas.png" alt="Logo alura p/ empresas">
+                    <a href="#" class="footer-lista-link">Alura para Empresas</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/AluraLATAM.png" alt="logo alura latam">
+                    <a href="#" class="footer-lista-link">Alura LATAM</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/AluraStart.png" alt="logo alura start">
+                    <a href="#" class="footer-lista-link">Alura Start</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/MusicDot.png" alt="logo musicDot">
+                    <a href="#" class="footer-lista-link">MusicDot</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/AluraLingua.png" alt="Alura Língua">
+                    <a href="#" class="footer-lista-link">Alura Língua</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/PM3.png" alt="logo pm3">
+                    <a href="#" class="footer-lista-link">PM3</a>
+                </li>
+            </ul>
+            <ul class="footer-lista">
+                <li class="footer-lista-titulo">Comunidade</li>
+                <li class="footer-lista-item">
+                    <img src="img/HipstersTech.png" alt="logo HipstersTech">
+                    <a href="#" class="footer-lista-link">Hipsters ponto Tech </a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/ScubaDev.png" alt="Logo ScubaDev">
+                    <a href="#" class="footer-lista-link">Scuba Dev</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/LayersTech.png" alt="logo LayersTech">
+                    <a href="#" class="footer-lista-link">Layers ponto Tech</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/LikeABoss.png" alt="logo LikeABoss">
+                    <a href="#" class="footer-lista-link">Like a Boss</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/CarreiraSemFronteira.png" alt="logo Carreira sem fronteria">
+                    <a href="#" class="footer-lista-link">Carreira sem fronteira</a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/HipstersJobs.png" alt="logo HipstersJobs">
+                    <a href="#" class="footer-lista-link">hipsters ponto jobs </a>
+                </li>
+                <li class="footer-lista-item">
+                    <img src="img/GUJ.png" alt="logo GUJ">
+                    <a href="#" class="footer-lista-link">GUJ</a>
+                </li>
+            </ul>
+        </div>
+
+
+        <a href="https://github.com/vieiragah" class="copy">
+            <p class="copy">&copy;Gabriel Apolinário</p>
+        </a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
