--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container-header">
             <input type="checkbox" id="menu" class="container-botao">
-            <label for="menu">
+            <label for="menu" class="menu-rotulo">
             <span class="menu-hamburger img-cabecalho"></span>
             </label>
             <ul class="lista-menu">
@@ -33,7 +33,7 @@
         </div>
             <ul class="-lista-menu">
                 <input type="checkbox" id="-menu-hamburg" class="-menu-botao">
-                <label for="-menu-hamburg">
+                <label for="-menu-hamburg" class="categorias">
                     <li class="-lista-item">Catergorias</li>
                 </label>
                 <ul class="lista-menu">
